tests/err_invalid_string01.json.err
Parse error at line 001

001: {"val": "a	"}
               	^
Invalid string character 0x09
